2003-05-14  Mark Salter  <msalter@redhat.com>

	* src/flash.c (flash_get_config): Add CONFIG_NETPORT case.

2003-05-13  Nick Garnett  <nickg@balti.calivar.com>

	* doc/redboot_installing.sgml: Added installation instructions for
	Atmel EB40A, EB42 and EB55 boards.

2003-05-06  Mark Salter  <msalter@redhat.com>

	* src/main.c (cyg_start): Clear gdb_active when returning from stub.

2003-05-06  Pierre Habraken  <Pierre.Habraken@imag.fr>

	* cdl/redboot.cdl: Added option
	CYGOPT_REDBOOT_BSP_SYSCALLS_EXIT_WITHOUT_TRAP for enabling (possibly
	single shot) programs to exit and return a termination status as
	their normal behavior (i.e. without raising a SIGTRAP).
	* src/syscall.c (__do_syscall): Added conditionally compiled code
	to SYS_exit for returning to RedBoot main loop without raising a
	SIGTRAP, even when the calling program is not being debugged.
	* src/main.c (cyg_start): Added code (following Jonathan Larmour's
	and Mark Salter's suggestions) to RedBoot main loop: a (context)
	savepoint is created before the thread of control is transferred to
	gdb stubs (through a trampoline procedure). This savepoint enables
	the stubs to return control back to the main loop by calling the
	return_to_redboot procedure (macro CYGACC_CALL_IF_MONITOR_RETURN).
	Procedure go_trampoline and variables go_saved_context and
	go_return_status have been respectively renamed	to trampoline,
	saved_context and return_status.

2003-04-23  Chris Garry <cgarry@sweeneydesign.co.uk>
	
	* src/flash.c: Only perform RAM check in fis load command when 
	CYGSEM_REDBOOT_VALIDATE_USER_RAM_LOADS = 1

2003-04-18  Gary Thomas  <gary@mlbassoc.com>

	* src/net/tftp_client.c: Arrange to ACK last good packet when closing.
	Without this, the host can be left tryint to send that packet forever.

2003-04-14  Jani Monoses  <jani@iv.ro>	
	
	* src/load.c:
	Change #else if to #elif so it compiles when TFTP is disabled. 
	
2003-04-08  Jonathan Larmour  <jifl@eCosCentric.com>
