@@ -1,3 +1,9 @@
+2003-05-20  Mark Salter  <msalter@redhat.com>
+
+	* cdl/redboot.cdl (CYGBLD_REDBOOT_CMD_LINE_HISTORY): New option.
+	* src/io.c: Support history command and history expansion.
+	* doc/redboot.sgml: Document command history support.
+
 2003-05-14  Mark Salter  <msalter@redhat.com>
 
 	* src/flash.c (flash_get_config): Add CONFIG_NETPORT case.
